--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 .data
+package-lock.json
 .DS_Store
 node_modules
 /dist
@@ -20,3 +21,4 @@ yarn-error.log*
 *.njsproj
 *.sln
 *.sw?
+package-lock.json
